--- a/main.css
+++ b/main.css
@@ -150,16 +150,39 @@ body {
   font-weight: 400;
   line-height: normal;
 }
+.hero__cards--right--image--mobile{
+  display: none;
+}
 /* footer end */
 @media only screen and (max-width:926px) {
   .header__cards--list {
     display: none;
   }
-  
+  .hero__cards--right--image{
+    display: none;
+  }
+  .hero__cards--right--image--mobile{
+    display: block;
+  }
+}
+@media only screen and (max-width:1201px) {
+  .hero__cards{
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .hero__cards--right--image{
+    width: 100%;
+  }
+  .hero__cards--left {
+    width: 100%;
+    text-align: center;
+  }
+
 }
 @media only screen and (max-width:760px) {
-  .footer__card{
-    display:none;
+  .footer{
+    flex-direction: column;
+    margin-top: 20px;
   }
   .header__cards--button{
     display: none;
@@ -173,12 +196,14 @@ body {
     font-size: 50px;
     color: #000;
   }
-  
+  .hero__cards--button{
+    width: 100%;
+  }
+  .footer__card--a{
+    font-size: 12px;
+  }
 }
 @media only screen and (max-width:760px) {
-  .hero__cards--left{
-    display:none;
-  }
   
 }
 @font-face {
