--- a/main.css
+++ b/main.css
@@ -33,10 +33,11 @@ body {
   justify-content: space-between;
 }
 
-.header__cards img{
+.header__cards img {
   margin: 0;
   padding: 0;
 }
+
 .header__cards--list {
   width: 40%;
   display: flex;
@@ -73,8 +74,9 @@ body {
   font-weight: 400;
   line-height: normal;
 }
-.hamburger{
- display: none;
+
+.hamburger {
+  display: none;
 }
 
 
@@ -150,84 +152,104 @@ body {
   font-weight: 400;
   line-height: normal;
 }
-.hero__cards--right--image--mobile{
+
+.hero__cards--right--image--mobile {
   display: none;
 }
+
 /* footer end */
 @media only screen and (max-width:926px) {
   .header__cards--list {
     display: none;
   }
-  .hero__cards--right--image{
+
+  .hero__cards--right--image {
     display: none;
   }
-  .hero__cards--right--image--mobile{
+
+  .hero__cards--right--image--mobile {
     display: block;
   }
 }
+
 @media only screen and (max-width:1201px) {
-  .hero__cards{
+  .hero__cards {
     flex-direction: column-reverse;
     justify-content: center;
   }
-  .hero__cards--right--image{
+
+  .hero__cards--right--image {
     width: 100%;
   }
+
   .hero__cards--left {
     width: 100%;
     text-align: center;
   }
 
 }
+
 @media only screen and (max-width:760px) {
-  .footer{
+  .footer {
     flex-direction: column;
     margin-top: 20px;
   }
-  .header__cards--button{
+
+  .header__cards--button {
     display: none;
   }
-  .hamburger{
+
+  .hamburger {
     display: flex;
     background-color: transparent;
     border: transparent;
   }
-  .hamburger i{
+
+  .hamburger i {
     font-size: 50px;
     color: #000;
   }
-  .hero__cards--button{
+
+  .hero__cards--button {
     width: 100%;
   }
-  .footer__card--a{
+
+  .footer__card--a {
     font-size: 12px;
   }
 }
-@media only screen and (max-width:760px) {
-  
-}
+
+@media only screen and (max-width:760px) {}
+
 @font-face {
   font-family: "Poppins 600";
   src: url(./Poppins/Poppins-SemiBold.ttf);
 }
+
 @font-face {
   font-family: "Poppins 400";
   src: url(./Poppins/Poppins-Regular.ttf);
 }
-#skills{
+
+/* cards start */
+
+#skills {
   width: 100%;
   margin-top: 50px;
+  margin-bottom: 200px;
 }
-#skills h1{
+
+#skills h1 {
   color: #000;
   font-family: "Poppins 600";
   font-size: 48px;
   font-style: normal;
   font-weight: 600;
-  line-height: 80px; 
+  line-height: 80px;
   text-align: center;
 }
-#skills .skills{
+
+#skills .skills {
   width: 100%;
   display: flex;
   align-items: center;
@@ -235,22 +257,26 @@ body {
   margin-top: 50px;
 
 }
-#skills .card__mobile{
+
+#skills .card__mobile {
   display: none;
 }
-#skills .card{
+
+#skills .card {
   width: 35%;
   height: 894px;
   border-radius: 10px;
   background-color: #F5F5F5;
   position: relative;
 }
-#skills .card img{
+
+#skills .card img {
   width: 220px;
   height: 220px;
   margin: 35px 22.5px;
 }
-#skills .card h2{
+
+#skills .card h2 {
   color: #263238;
   font-family: "Poppins";
   font-size: 30px;
@@ -259,7 +285,8 @@ body {
   line-height: 80px;
   margin-left: 43px;
 }
-#skills .card p{
+
+#skills .card p {
   width: 80%;
   color: #8F95A5;
   font-family: "Poppins";
@@ -270,7 +297,8 @@ body {
   margin-left: 43px;
   height: 250px;
 }
-.btn{
+
+.btn {
   padding: 17px 64px;
   border-radius: 5px;
   background: #263238;
@@ -283,11 +311,13 @@ body {
   line-height: normal;
   margin-left: 43px;
 }
-.btn__card{
+
+.btn__card {
   bottom: 210px;
   position: absolute;
 }
-#skills .cards{
+
+#skills .cards {
   width: 65%;
   display: flex;
   align-items: center;
@@ -295,40 +325,49 @@ body {
   gap: 19px;
   flex-wrap: wrap;
 }
-#skills .cards .writing{
+
+#skills .cards .writing {
   width: 45%;
   height: 532px;
   position: relative;
 }
-#skills .cards .writing img{
+
+#skills .cards .writing img {
   width: 193px;
   height: 193px;
   margin-left: 110px;
 }
-#skills .cards .writing h2{
+
+#skills .cards .writing h2 {
   width: 293px;
   height: 293px;
 }
-#skills .cards .writing .btn__writing{
+
+#skills .cards .writing .btn__writing {
   bottom: 35px;
   position: absolute;
-} 
-#skills .cards .speaking{
+}
+
+#skills .cards .speaking {
   width: 45%;
   height: 532px;
 }
-#skills .cards .speaking img{
+
+#skills .cards .speaking img {
   width: 193px;
   height: 163px;
 }
-#skills .cards .speaking h2{
+
+#skills .cards .speaking h2 {
   line-height: 60px;
 }
-#skills .cards .speaking .btn__speaking{
+
+#skills .cards .speaking .btn__speaking {
   position: absolute;
   bottom: 35px;
 }
-#skills .cards .listening{
+
+#skills .cards .listening {
   width: 93%;
   height: 343px;
   display: flex;
@@ -336,201 +375,251 @@ body {
   justify-content: space-between;
   flex-direction: row-reverse;
 }
-#skills .cards .listening .listening__text{
+
+#skills .cards .listening .listening__text {
   width: 60%;
   height: 200px;
   position: relative;
 }
-#skills .cards .listening .listening__text h2{
+
+#skills .cards .listening .listening__text h2 {
   line-height: 60px;
 }
-#skills .cards .listening .listening__text .btn__listening{
+
+#skills .cards .listening .listening__text .btn__listening {
   position: absolute;
   bottom: -20px;
 }
-#skills .cards .listening .listening__text img{
+
+#skills .cards .listening .listening__text img {
   width: 35%;
   height: auto;
 }
+
 @media only screen and (max-width: 1160px) {
-  #skills .btn{
+  #skills .btn {
     padding: 15px 40px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 22px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 14px;
   }
-  #skills .cards .writing img{
+
+  #skills .cards .writing img {
     margin-left: 80px;
   }
 }
+
 @media only screen and (max-width: 992px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .cards .writing img{
+
+  #skills .cards .writing img {
     margin-left: 50px;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 150px;
-    
+
   }
 }
+
 @media only screen and (max-width: 957px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .cards .listening .listening__text{
+
+  #skills .cards .listening .listening__text {
     font-size: 12px;
   }
-  #skills .cards .listening .listening__text p{
+
+  #skills .cards .listening .listening__text p {
     width: 100%;
   }
-  #skills .cards .listening img{
+
+  #skills .cards .listening img {
     width: 38%;
     height: auto;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 150px;
-    
+
   }
 }
+
 @media only screen and (max-width: 832px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills .btn__writing{
+
+  #skills .btn__writing {
     margin-left: 30px;
   }
-  #skills h1{
+
+  #skills h1 {
     font-size: 36px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
     margin-left: 10px;
     width: 70%;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
     margin-left: 20px;
     width: 60%;
   }
-  #skills .cards .speaking .speaking__text{
+
+  #skills .cards .speaking .speaking__text {
     font-size: 12px;
     margin-left: -15px;
   }
-  #skills .cards .listening .listening__text{
+
+  #skills .cards .listening .listening__text {
     width: 65%;
     font-size: 12px;
     margin-left: -10px;
   }
-  #skills .cards .listening .listening__text p{
+
+  #skills .cards .listening .listening__text p {
     width: 100%;
   }
-  #skills .cards .listening img{
+
+  #skills .cards .listening img {
     width: 33%;
     height: auto;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 150px;
-    
+
   }
-  #skills .skills .cards .speaking img{
+
+  #skills .skills .cards .speaking img {
     width: 80%;
     height: auto;
   }
-  #skills .skills .cards .writing img{
+
+  #skills .skills .cards .writing img {
     margin-left: 30px;
     width: 80%;
     height: auto;
   }
 }
+
 @media only screen and (max-width: 782px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  
-  #skills .cards .listening .listening__text{
+
+  #skills .cards .listening .listening__text {
     width: 60%;
     height: 250px;
   }
-  #skills .cards .listening .listening__text p{
+
+  #skills .cards .listening .listening__text p {
     width: 100%;
   }
-  #skills .cards .listening img{
+
+  #skills .cards .listening img {
     width: 35%;
     height: auto;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 150px;
-    
+
   }
-  #skills .skills .cards .speaking img{
+
+  #skills .skills .cards .speaking img {
     width: 80%;
     height: auto;
   }
 }
+
 @media only screen and (max-width: 745px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills h1{
+
+  #skills h1 {
     font-size: 24px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .skills .cards{
+
+  #skills .skills .cards {
     display: none;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     display: block;
   }
-  #skills .skills{
+
+  #skills .skills {
     width: 100%;
     display: flex;
     align-items: center;
@@ -539,75 +628,93 @@ body {
     gap: 20px;
     margin-top: 30px;
   }
-  #skills .cards .listening .listening__text{
+
+  #skills .cards .listening .listening__text {
     width: 60%;
     height: 250px;
   }
-  #skills .cards .listening .listening__text p{
+
+  #skills .cards .listening .listening__text p {
     width: 100%;
   }
-  #skills .cards .listening img{
+
+  #skills .cards .listening img {
     width: 35%;
     height: auto;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 20px;
-    
+
   }
-  #skills .skills .cards .speaking img{
+
+  #skills .skills .cards .speaking img {
     width: 80%;
     height: auto;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     width: 47%;
     height: 534px;
   }
-  #skills .skills .card img{
+
+  #skills .skills .card img {
     width: 200px;
     height: auto;
     margin: 5px auto;
   }
-  #skills .skills .card h2{
+
+  #skills .skills .card h2 {
     font-size: 18px;
     font-family: "Poppins 400";
     margin-top: 0px;
     line-height: 40px;
   }
-  #skills .skills .card p{
+
+  #skills .skills .card p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .skills .card .btn{
+
+  #skills .skills .card .btn {
     font-size: 12px;
     font-family: "Poppins 400";
     padding: 10px 35px;
   }
 }
+
 @media only screen and (max-width: 478px) {
-  #skills .btn{
+  #skills .btn {
     padding: 13px 30px;
   }
-  #skills h1{
+
+  #skills h1 {
     font-size: 24px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .skills .cards{
+
+  #skills .skills .cards {
     display: none;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     display: block;
   }
-  #skills .skills{
+
+  #skills .skills {
     width: 100%;
     display: flex;
     align-items: center;
@@ -616,30 +723,36 @@ body {
     gap: 20px;
     margin-top: 30px;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
     bottom: 20px;
-    
+
   }
-  #skills .skills .cards .speaking img{
+
+  #skills .skills .cards .speaking img {
     width: 80%;
     height: auto;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     width: 47%;
     height: 534px;
     position: relative;
   }
-  #skills .skills .card img{
+
+  #skills .skills .card img {
     width: 180px;
     height: auto;
     margin: 5px auto;
     position: absolute;
   }
-  #skills .skills .card h2{
+
+  #skills .skills .card h2 {
     font-size: 18px;
     font-family: "Poppins 400";
     margin-top: 0px;
@@ -648,14 +761,16 @@ body {
     top: 180px;
     left: -15px;
   }
-  #skills .skills .card p{
+
+  #skills .skills .card p {
     font-size: 12px;
     font-family: "Poppins 400";
     position: absolute;
     top: 215px;
     left: -15px;
   }
-  #skills .skills .card .btn{
+
+  #skills .skills .card .btn {
     font-size: 12px;
     font-family: "Poppins 400";
     padding: 10px 35px;
@@ -663,27 +778,34 @@ body {
     left: -15px;
   }
 }
+
 @media only screen and (max-width: 410px) {
-  #skills .btn{
+  #skills .btn {
     padding: 14px 43px;
   }
-  #skills h1{
+
+  #skills h1 {
     font-size: 24px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .skills .cards{
+
+  #skills .skills .cards {
     display: none;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     display: block;
   }
-  #skills .skills{
+
+  #skills .skills {
     width: 100%;
     display: flex;
     align-items: center;
@@ -692,25 +814,30 @@ body {
     gap: 20px;
     margin-top: 30px;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
-    bottom: 20px;  
+    bottom: 20px;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     width: 90%;
     height: 534px;
     position: relative;
   }
-  #skills .skills .card img{
+
+  #skills .skills .card img {
     width: 70%;
     height: auto;
     margin: 5px 15%;
     position: absolute;
   }
-  #skills .skills .card h2{
+
+  #skills .skills .card h2 {
     font-size: 18px;
     font-family: "Poppins 400";
     margin-top: 0px;
@@ -719,14 +846,16 @@ body {
     top: 230px;
     left: -15px;
   }
-  #skills .skills .card p{
+
+  #skills .skills .card p {
     font-size: 12px;
     font-family: "Poppins 400";
     position: absolute;
     top: 265px;
     left: -15px;
   }
-  #skills .skills .card .btn{
+
+  #skills .skills .card .btn {
     font-size: 12px;
     font-family: "Poppins 400";
     padding: 10px 35px;
@@ -736,26 +865,32 @@ body {
 }
 
 @media only screen and (max-width: 294px) {
-  #skills .btn{
+  #skills .btn {
     padding: 14px 43px;
   }
-  #skills h1{
+
+  #skills h1 {
     font-size: 24px;
   }
-  #skills h2{
+
+  #skills h2 {
     font-size: 20px;
   }
-  #skills p{
+
+  #skills p {
     font-size: 12px;
     font-family: "Poppins 400";
   }
-  #skills .skills .cards{
+
+  #skills .skills .cards {
     display: none;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     display: block;
   }
-  #skills .skills{
+
+  #skills .skills {
     width: 100%;
     display: flex;
     align-items: center;
@@ -764,25 +899,30 @@ body {
     gap: 20px;
     margin-top: 30px;
   }
-  #skills .card{
+
+  #skills .card {
     position: relative;
   }
-  #skills .card .btn__card{
+
+  #skills .card .btn__card {
     position: absolute;
-    bottom: 20px;  
+    bottom: 20px;
   }
-  #skills .skills .card{
+
+  #skills .skills .card {
     width: 90%;
     height: 534px;
     position: relative;
   }
-  #skills .skills .card img{
+
+  #skills .skills .card img {
     width: 70%;
     height: auto;
     margin: 5px 15%;
     position: absolute;
   }
-  #skills .skills .card h2{
+
+  #skills .skills .card h2 {
     font-size: 18px;
     font-family: "Poppins 400";
     margin-top: 0px;
@@ -791,14 +931,16 @@ body {
     top: 180px;
     left: -15px;
   }
-  #skills .skills .card p{
+
+  #skills .skills .card p {
     font-size: 12px;
     font-family: "Poppins 400";
     position: absolute;
     top: 215px;
     left: -15px;
   }
-  #skills .skills .card .btn{
+
+  #skills .skills .card .btn {
     font-size: 12px;
     font-family: "Poppins 400";
     padding: 10px 35px;
@@ -807,3 +949,116 @@ body {
   }
 }
 
+/* cards end */
+
+
+/* aboutus start */
+.aboutus {
+  display: flex;
+  justify-content: space-between;
+}
+
+.aboutus__cards {
+  width: 45%;
+  margin: 0;
+  padding: 0;
+  margin-top: 85px;
+}
+
+.aboutus--h3 {
+  margin: 0;
+  padding: 0;
+  color: #000;
+  font-family: Poppins;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 80px;
+  /* 166.667% */
+}
+
+.aboutus--span {
+  color: #8F95A5;
+  font-family: "Poppins";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.aboutus--p {
+  margin: 0;
+  padding: 0;
+  width: 45%;
+  color: #8F95A5;
+  font-family: "Poppins";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.aboutus--item {
+  margin-top: 20px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.aboutus--item--li {
+  list-style-type: none;
+  color: #2A3246;
+  font-family: "Poppins";
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 80px;
+  /* 166.667% */
+}
+
+.aboutus--card--botttom {
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.aboutus--card--p {
+  color: #8F95A5;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+@media only screen and (max-width:926px) {
+.aboutus--img {
+    display: block;
+  }
+}
+
+@media only screen and (max-width:1201px) {
+  .aboutus{
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .aboutus--h3{
+    text-align: center;
+  }
+  .aboutus--img{
+    width: 100%;
+  }
+
+  .aboutus__cards {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media only screen and (max-width:1102px) {
+  .aboutus--p{
+    text-align: center;
+  }
+
+}
