--- a/main.css
+++ b/main.css
@@ -1037,6 +1037,9 @@ body {
 .aboutus--img {
     display: block;
   }
+  .container{
+    width: 80%;
+  }
 }
 
 @media only screen and (max-width:1201px) {
@@ -1055,10 +1058,21 @@ body {
     width: 100%;
     text-align: center;
   }
+  .container{
+    width: 80%;
+  }
 }
 @media only screen and (max-width:1102px) {
   .aboutus--p{
     text-align: center;
+    display: none;
+  }
+  .container{
+    width: 80%;
+  }
+  .aboutus__cards img{
+    width: 70%;
+    height: auto;
   }
 
 }
